# nalgebra-numpy

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl
.github/workflows/: rust.yml
src/: from_numpy.rs  lib.rs  to_numpy.rs
tests/: assert.rs  errors.rs  from_numpy.rs  from_python.rs  to_numpy.rs  to_python.rs
