[package]
name = "nalgebra-numpy"
description = "conversions between nalgebra and numpy"
version = "0.1.3"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
edition = "2018"
license = "BSD-2-Clause"
repository = "https://github.com/fusion-engineering/nalgebra-numpy"
documentation = "https://docs.rs/nalgebra-numpy/"

readme = "README.md"
keywords = ["python", "numpy", "nalgebra", "matrix", "conversion"]
categories = ["science"]

[dependencies]
nalgebra = "0.19.0"
numpy = "0.7.0"
pyo3 = "0.8.2"

[dev-dependencies]
inline-python = "0.3.1"
