[package]
name = "nalgebra-numpy"
description = "conversions between nalgebra and numpy"
version = "0.2.1"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
edition = "2018"
license = "BSD-2-Clause"
repository = "https://github.com/fusion-engineering/nalgebra-numpy"
documentation = "https://docs.rs/nalgebra-numpy/"

readme = "README.md"
keywords = ["python", "numpy", "nalgebra", "matrix", "conversion"]
categories = ["science"]

[dependencies]
nalgebra = "0.24.1"
numpy = "0.11"
pyo3 = "0.11"

[dev-dependencies]
inline-python = "0.6.0"
assert2 = "0.3.4"
